# reproduce_thesis

./: .gitignore  README.md
chapter_01/: gosip_vae_pan_tcga_all_cancers_FINALabs.executed.ipynb  intro_sims.ipynb
chapter_02/: quick_testing.sh  regenerate_simulations.sh  replace_all.sh  updater.sh
chapter_02/analyses/: 050423_gflownet_sims_full_copy.ipynb  gflownet_plotter.ipynb  gfn_src.py  gosip_hpap_VAE3k.ipynb  scanoramahpap3k.ipynb  vae_sim_realistic_500_beta_t2d_to_control.ipynb  vae_sim_realistic_500_control_alpha_to_beta.ipynb  vae_sim_realistic_500_control_alpha_to_beta_custom.ipynb
chapter_02/analyses/R_analyses/: limmascrnaseq.R  t2doverctrlalpha.csv  t2doverctrlbeta.csv  t2doverctrldelta.csv
chapter_02/analyses/nozig/: export_script.ipynb  nbonlyvae_sim_realistic_500_control_alpha_to_beta.ipynb  nbonlyvae_sim_realistic_500_control_alpha_to_beta_custom-Copy1.ipynb  nbonlyvae_sim_realistic_500_control_beta_t2d_to_control.ipynb  simulationPlotter_nozig.ipynb  umapofhpap.ipynb
chapter_02/analyses/nozig/results/: README.txt  (+3 more)
chapter_02/analyses/realistic_simulation_alpha_to_beta/: alphatobetaUMAP.csv  realistic_simulation_alpha_to_beta_SIMULATION_oracle_ZINB.db  realistic_simulation_alpha_to_beta_SIMULATION_propagator_ZINB.db  realistic_simulation_alpha_to_beta_SIMULATION_stargan_ZINB.db
chapter_02/analyses/realistic_simulation_alpha_to_beta_custom/: customalphatobetaUMAP.csv  realistic_simulation_alpha_to_beta_custom_SIMULATION_oracle_ZINB.db  realistic_simulation_alpha_to_beta_custom_SIMULATION_propagator_ZINB.db  realistic_simulation_alpha_to_beta_custom_SIMULATION_stargan_ZINB.db
chapter_02/analyses/realistic_simulation_beta_t2d_to_control/: realistic_simulation_beta_t2d_to_control_SIMULATION_oracle_ZINB.db  realistic_simulation_beta_t2d_to_control_SIMULATION_propagator_ZINB.db  realistic_simulation_beta_t2d_to_control_SIMULATION_stargan_ZINB.db  t2dtocontrolUMAP.csv
chapter_02/extra_scripts/: src.py
chapter_02/gosip/: environment.yml  guidebook.txt  updater.sh
chapter_02/gosip/tests/: test_pipeline.py
chapter_04/: skip_pvalue.ipynb
chapter_04/analysis/: SIMULATION-TCGA_high_to_low_risk-KIRC.executed.ipynb  SIMULATION-TCGA_high_to_low_risk-newWheel.executed.ipynb  SIMULATION-TCGA_high_to_low_risk.executed.ipynb  gosip_vae_pan_tcga_all_cancers_FINALabs.executed.ipynb  runsims.sh  simulationPlotter_nozig.ipynb  tcga_pancancer_results.ipynb
chapter_04/analysis/pancancer_tcga/: cbnn_hyperparam_ranges.json  cbnn_hyperparam_selected.json  oracle_hyperparam_ranges.json  oracle_hyperparam_selected.json  pancancer_tcga_SIMULATION_oracle.db  pancancer_tcga_SIMULATION_propagator.db  pancancer_tcga_SIMULATION_stargan.db  pancancer_tcga_pan_tcga_CBNN.db  propagator_hyperparam_ranges.json  propagator_hyperparam_selected.json  stargan_hyperparam_ranges.json  stargan_hyperparam_selected.json
chapter_04/cbnn/: LICENSE.txt  README.md  pyproject.toml  updater.sh
chapter_04/cbnn/src/cbnn/: __about__.py  __init__.py  cbnn.py
chapter_04/cbnn/tests/: test_cbnn.py  time_varying_survival_data.csv
chapter_04/extra_scripts/: cbnn_src_no_centrality.py  gfn_src.py  src.py  tcga_src.py
chapter_04/gosip/: README.md  pyproject.toml  updater.sh
chapter_04/gosip/src/gosip/: __about__.py  code_dump.txt  neural_network_utils.py  perturbation_impact_utils.py
chapter_04/gosip/tests/: __init__.py
chapter_05/: 050423_gflownet_sims_full_copy.ipynb  gflownet_plotter.ipynb
chapter_05/custom_environment_gflownet_implementation/: simulation.pkl
(+99 files in other folders)
